<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/trainListFragment">

    <fragment
        android:id="@+id/categoryListFragment"
        android:name="com.canli.oya.traininventoryroom.ui.categories.CategoryListFragment"
        android:label="@string/all_categories">
        <action
            android:id="@+id/action_categoryListFragment_to_filterTrainFragment"
            app:destination="@id/filterTrainFragment" />
    </fragment>

    <fragment
        android:id="@+id/brandListFragment"
        android:name="com.canli.oya.traininventoryroom.ui.brands.BrandListFragment"
        android:label="@string/all_brands">
        <action
            android:id="@+id/action_brandListFragment_to_filterTrainFragment"
            app:destination="@id/filterTrainFragment" />
    </fragment>

    <fragment
        android:id="@+id/trainListFragment"
        android:name="com.canli.oya.traininventoryroom.ui.trains.TrainListFragment"
        android:label="@string/all_trains">
        <action
            android:id="@+id/action_trainListFragment_to_addTrainFragment"
            app:destination="@id/addTrainFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"/>
        <action
            android:id="@+id/action_trainListFragment_to_trainDetailsFragment"
            app:destination="@id/trainDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/addTrainFragment"
        android:name="com.canli.oya.traininventoryroom.ui.addtrain.AddTrainFragment">
        <argument
            android:name="chosenTrain"
            app:argType="com.canlioya.core.models.Train"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/trainDetailsFragment"
        android:name="com.canli.oya.traininventoryroom.ui.trains.TrainDetailsFragment">
        <argument
            android:name="trainId"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainDetailsFragment_to_addTrainFragment"
            app:destination="@id/addTrainFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"/>
    </fragment>

    <dialog
        android:id="@+id/export_to_excel"
        android:name="com.canli.oya.traininventoryroom.ui.exportToExcel.ExportingToExcelDialog">
        <action
            android:id="@+id/action_export_to_excel_to_uploadExcelDialog"
            app:destination="@id/uploadExcelDialog"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"/>
    </dialog>
    <dialog
        android:id="@+id/uploadExcelDialog"
        android:name="com.canli.oya.traininventoryroom.ui.exportToExcel.UploadExcelDialog">
        <argument
            android:name="excelFileUri"
            app:argType="string" />
    </dialog>
    <fragment
        android:id="@+id/filterTrainFragment"
        android:name="com.canli.oya.traininventoryroom.ui.filter.FilterTrainFragment"
        android:label="@string/search_trains" >
        <argument
            android:name="intentRequestCode"
            app:argType="string"
            android:defaultValue="search"/>
        <argument
            android:name="categoryName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="brandName"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_filterTrainFragment_to_trainDetailsFragment"
            app:destination="@id/trainDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.canli.oya.traininventoryroom.ui.trash.TrashListFragment"
        android:label="@string/trash" />
</navigation>