<resources>
    <string name="app_name">Train Inventory</string>

    <string name="trains">Trains</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="all_brands">All Brands</string>
    <string name="add_train">Add Item</string>
    <string name="all_categories">All Categories</string>

    <!-- Details and Add Train screen -->
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="reference">Reference:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_image">Add image</string>
    <string name="change_image">Change image</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="all_trains">All Items</string>
    <string name="brand_name">Brand name:</string>
    <string name="add_logo">Add logo</string>
    <string name="change_logo">Change logo</string>
    <string name="scale">Scale:</string>
    <string name="category_name">Add category</string>
    <string name="select_category">--Select category--</string>
...
